Fix line breaks in a few email clients

--- a/app/assets/stylesheets/default.css.scss
+++ b/app/assets/stylesheets/default.css.scss
@@ -148,7 +148,8 @@ textarea { &.l10 { height: 14em; }}
     a { color: #0000EE; }
     a:visited { color: #551a8b; }
     a:active { color: #ee0000; }
-    p { line-height: 115%; margin-top: 0.3em; color: $light-color; }
+    .title, .tags { margin: 0; }
+    .description { line-height: 115%; margin-top: 0.3em; color: $light-color; }
     ul { padding: 0; margin-bottom: 3em; }
     li { list-style: none; display: inline; padding-right: 3em; }
   }
