--- a/app/assets/stylesheets/emails.css.scss
+++ b/app/assets/stylesheets/emails.css.scss
@@ -64,7 +64,8 @@ footer {
   a { color: #0000EE; }
   a:visited { color: #551a8b; }
   a:active { color: #ee0000; }
-  p { line-height: 115%; margin-top: 0.3em; color: $light-color; }
-  ul { padding: 0; margin: 0; margin-bottom: 3em; }
-  li { list-style: none; display: block; margin: 1em 0; }
+  .title, .tags { margin: 0; }
+  .description { line-height: 115%; margin-top: 0.3em; color: $light-color; }
+  ul { padding: 0; margin-bottom: 3em; }
+  li { list-style: none; display: inline; padding-right: 3em; }
 }
